[tool.poetry]
name = "spond"
version = "1.1.1"
description = "Simple, unofficial library with some example scripts to access data from the Spond API."
authors = ["Ola Thoresen <ola@nytt.no>"]
license = "GPL 3.0"
readme = 'README.md'
repository = 'https://github.com/Olen/Spond'

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = ">=0.23.6,<0.26.0"

[tool.poetry.group.dev-not-ci.dependencies]
# Group for dev dependencies which don't require explicit installation in CI,
# as they are handled by GitHub actions.
ruff = "^0.9.6"

[tool.ruff]
target-version = "py39"  # Ruff doesn't yet infer this from [tool.poetry.dependencies]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long: needs code refactors first
]

[tool.ruff.lint.per-file-ignores]
# Don't try to sort imports in example files, as non-existent `config` module causes
# issues in CI
"attendance.py" = ["I001"]
"groups.py" = ["I001"]
"ical.py" = ["I001"]
"manual_test_functions.py" = ["I001"]
"transactions.py" = ["I001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
