[tool.poetry]
name = "spond"
version = "1.2.1"
description = "Simple, unofficial library with some example scripts to access data from the Spond API."
authors = ["Ola Thoresen <ola@nytt.no>"]
license = "GPL 3.0"
readme = 'README.md'
repository = 'https://github.com/Olen/Spond'

[tool.poetry.dependencies]
python = ">=3.11"
aiohttp = ">=3.8.5"
pydantic = ">=2.0"

[tool.poetry.group.dev.dependencies]
# Constraint on `python` is required: pdoc's transitive `markdown2` declares
# `python<4`, which conflicts with our unbounded `python = ">=3.10"` upper.
pdoc = {version = ">=16.0.0", python = "<4"}
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
ruff = ">=0.15.0"

[tool.pytest.ini_options]
# Pinned explicitly: pytest-asyncio's default is currently unset and will
# flip to "function" in a future release — set now so behaviour can't drift.
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"  # Ruff doesn't yet infer this from [tool.poetry.dependencies]

[tool.ruff.lint]
select = [
    "ANN201",  # Missing return type annotation for public function
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long: needs code refactors first
]

[tool.ruff.lint.per-file-ignores]
# In example files:
# - Don't try to sort imports as non-existent `config` module causes issues in CI
"examples/*" = ["I001"]

# In tests:
# - Don't enforce type annotations for now
"**/{tests}/*" = ["ANN"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
