[metadata]
name = spond
version = 0.0.5
description = Spond provides access to the Spond API
url = https://github.com/Olen/Spond
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM



[options]
packages = spond
install_requires = asyncio; aiohttp

[files]
packages = spond
